--- a/nginx-exoporter/deployment.yaml
+++ b/nginx-exoporter/deployment.yaml
@@ -18,4 +18,4 @@ spec:
         args:
           - -nginx.scrape-uri=http://nginx-service:80/stub_status
         ports:
-        - containerPort: 9113   # default metrics port
+        - containerPort: 9113
