--- a/nginx/deployment.yaml
+++ b/nginx/deployment.yaml
@@ -14,13 +14,21 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.29.1
+        image: nginx:latest
         ports:
         - containerPort: 80
         volumeMounts:
+        # HTML content
+        - name: html-volume
+          mountPath: /usr/share/nginx/html
+        # Nginx config: mount as default.conf to override default server
         - name: nginx-config-volume
-          mountPath: /etc/nginx/conf.d/
+          mountPath: /etc/nginx/conf.d/default.conf
+          subPath: default.conf
       volumes:
+      - name: html-volume
+        configMap:
+          name: nginx-html
       - name: nginx-config-volume
         configMap:
           name: nginx-config
