--- a/prometheus/prometheus-config.yaml
+++ b/prometheus/prometheus-config.yaml
@@ -2,16 +2,15 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: prometheus-config
-  namespace: observability
 data:
   prometheus.yml: |
     global:
       scrape_interval: 15s
 
     scrape_configs:
-      - job_name: 'nginx'
+      - job_name: 'nginx-exporter'
         static_configs:
-          - targets: ['nginx-exporter-service:9113']
+          - targets: ['nginx-exporter-service.default.svc.cluster.local:9113']
 
       - job_name: 'kube-state-metrics'
         static_configs:
@@ -28,3 +27,8 @@ data:
         kubernetes_sd_configs:
           - role: node
         metrics_path: /metrics/cadvisor
+
+      # --- New job for your hello-python app ---
+      - job_name: 'hello-python'
+        static_configs:
+          - targets: ['hello-python-service.default.svc.cluster.local:8000']
