--- a/prometheus/service.yaml
+++ b/prometheus/service.yaml
@@ -2,7 +2,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: prometheus-service
-  namespace: observability
 spec:
   type: NodePort
   selector:
@@ -11,4 +10,4 @@ spec:
     - protocol: TCP
       port: 9090
       targetPort: 9090
-      nodePort: 30901   # optional, or auto-assign
+      nodePort: 30901
